pxc/tests/test_38_ptr/constr_restriction.px
namespace constr_restriction;
import common -;
import regex::posix -;

struct foo(int x0, int y0, string const& s) {
  int x = x0;
  int y = y0;
  regerror_t e;
  regex re = regex(s, REG_EXTENDED, e);
}

function int f1(foo const& x)
{
  return x.x + x.y;
}

{
  const p = ptr(foo(10, 20, "([a-z]+)")); // ok
  println(f1(*p));

  println(*ptr(foo(20, 50, "a"))); // error
}
